--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header {
 
 .header_top {
   background-color: #303030;
-  
+
 }
 
 .header_top .header_btn {
@@ -68,7 +68,8 @@ header {
   padding-left: 20px;
   padding-right: 30px;
 }
-.header_top .header_phone::before{
+
+.header_top .header_phone::before {
   font-family: 'icomoon';
   content: "\e900";
   position: absolute;
@@ -76,7 +77,7 @@ header {
   color: #ffc222;
 }
 
-.header_top .header_email::before{
+.header_top .header_email::before {
   font-family: 'icomoon';
   content: "\e901";
   position: absolute;
@@ -89,19 +90,19 @@ header {
 }
 
 .header_content {
-  padding: 34px 0px 0px;
+  padding: 10px 0px 0px;
 }
 
 .header_content .header_logo img {
-  width: 120px;
-  height: 100px;
-  margin: -25px 0px 0px 15px;
+  width: 110px;
+  margin: 0px 0px 0px 15px;
 
 }
 
 .header_content .header_content-inner {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header_content .menu li {
@@ -125,4 +126,84 @@ header {
 
 .menu li+li {
   padding-left: 10px;
+}
+
+/* OKNO */
+#modal {
+  display: none;
+  background-color: #5e5e5e;
+}
+
+.window_ank {
+  width: 500px;
+  height: 300px;
+  color: #fff;
+}
+
+.window_ank .window_ank_log img {
+  top: 20px;
+  right: 50px;
+  position: absolute;
+  border-radius: 100%;
+  box-shadow: 0 0 5px 3px #000;
+}
+
+/*  */
+
+.welcome .container {
+  margin: 60px 0px 0px 0px;
+}
+
+.welcome_content {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.welcome .welcome_content .welcome_img img {
+  width: 600px;
+}
+
+.welcome .welcome_content .welcome_cloud_text {
+  font-size: 20px;
+  line-height: 25px;
+  overflow: hidden;
+  border-right: .15em solid #ffc222;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: typing 3.5s steps(60, end), blink-caret .65s step-end 9;
+  white-space: nowrap;
+  border-right: .15em solid transparent;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+
+  to {
+    width: 100%
+  }
+}
+
+@keyframes blink-caret {
+
+  from,
+  to {
+    border-color: transparent
+  }
+
+  50% {
+    border-color: orange
+  }
+}
+
+.welcome .welcome_content .welcome_cloud_text h1 {
+  font-size: 60px;
+}
+
+.welcome .welcome_content .welcome_cloud_text h2 {
+  font-size: 30px;
+  line-height: 40px;
 }
