--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,13 @@ body {
 
 header {
   font-family: 'Roboto', sans-serif;
-  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, .5);
 }
 
 .header_top {
+  width: 100%;
   background-color: #303030;
-
 }
+
 
 .header_top .header_btn {
   padding: 5px 20px 4px 50px;
@@ -90,13 +90,22 @@ header {
 }
 
 .header_content {
+  width: 100%;
+  background-color: #fff;
   padding: 10px 0px 0px;
+  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, .5);
+
+}
+
+.header_fixed {
+  position: fixed;
+  top: 0;
+  z-index: 999;
 }
 
 .header_content .header_logo img {
   width: 110px;
   margin: 0px 0px 0px 15px;
-
 }
 
 .header_content .header_content-inner {
@@ -150,8 +159,10 @@ header {
 
 /*  */
 
-.welcome .container {
-  margin: 60px 0px 0px 0px;
+.welcome {
+  margin: 0 auto;
+  padding: 60px 5% 0px 5%;
+  min-height: 450px;
 }
 
 .welcome_content {
@@ -206,4 +217,166 @@ header {
 .welcome .welcome_content .welcome_cloud_text h2 {
   font-size: 30px;
   line-height: 40px;
+}
+
+.aboutMe {
+  padding: 50px;
+  width: 100%;
+  min-height: 300px;
+  background-color: rgb(48 48 48);
+}
+
+.aboutMe .aboutMe_content {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.aboutMe .aboutMe_text {
+
+  text-align: justify;
+  padding: 20px;
+  width: 50%;
+  float: left;
+  background-color: #fff;
+  border-radius: 2%;
+  box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+  /* background-color: rgb(102, 102, 102);
+  box-shadow: 0 1px 4px rgba(255, 255, 255, 0.3),
+    -23px 0 20px -23px rgba(255, 255, 255, 0.6),
+    23px 0 20px -23px rgba(255, 255, 255, 0.6),
+    inset 0 0 40px rgba(255, 255, 255, 0.1); */
+}
+
+.aboutMe .aboutMe_photo {
+  float: right;
+  width: 45%;
+}
+
+.aboutMe .aboutMe_photo img {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  width: 250px;
+  border-radius: 4%;
+}
+
+.skills {
+  width: 100%;
+  min-height: 350px;
+}
+
+.skills .skills_content {
+  width: 100%;
+  padding: 60px 0 60px 0;
+
+}
+
+.skills .skills_content .skills_text {
+  float: right;
+  width: 45%;
+  text-align: justify;
+}
+
+.skills_text_animation {
+  animation-name: slideLeft;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  visibility: visible !important;
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(150%);
+
+  }
+
+  50% {
+    transform: translateX(-8%);
+  }
+
+  65% {
+    transform: translateX(4%);
+  }
+
+  80% {
+    transform: translateX(-4%);
+
+  }
+
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+
+
+.skills .skills_content .skills_box {
+  float: left;
+  width: 45%;
+  min-height: 400%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.skills .skills_content .skills_box .box img {
+  width: 150px;
+}
+
+.projects {
+  background-color: rgb(48 48 48);
+  padding: 60px 0 60px 0;
+  min-height: 400px;
+}
+
+.projects_content_text {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.projects_content_box {
+  margin: 0 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: minmax(120px, auto);
+  gap: 20px;
+}
+
+.projects_box {
+  height: 100%;
+  border: 1px solid #2c3c6b;
+  border-radius: 10px;
+  filter: brightness(70%);
+}
+
+.projects_box:hover {
+  transform: scale(1.05);
+  transition: .3s;
+  filter: none;
+}
+
+.projects_box:nth-child(1) {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+
+.projects .projects_box img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.projects .projects_box img:hover {
+  box-shadow: 400px 0 0 0 rgba(0, 0, 0, .3) inset;
+}
+
+.projects .projects_box a {
+  height: 100%;
+  list-style: none;
+  text-decoration: none;
 }
