--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,15 @@ li {
   margin: 0 auto;
   padding: 0 15px;
 }
-
+@media(max-width:1200px){
+  .container{
+    max-width: 970px;
+  }
+}
 body {
   font-family: 'PTS', serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 0.875em;
   line-height: 18px;
   color: #5e5e5e;
 }
@@ -36,7 +40,7 @@ header {
 }
 
 .header_top {
-  width: 100%;
+  max-width: 100%;
   background-color: #303030;
 }
 
@@ -44,7 +48,7 @@ header {
 .header_top .header_btn {
   padding: 5px 30px 4px 30px;
   float: right;
-  font-size: 16px;
+  font-size: 1em;
   line-height: 36px;
   color: #1b1b1b;
   background-color: #ffc222;
@@ -139,7 +143,7 @@ header {
   color: #000;
   font-weight: 400;
   line-height: 36px;
-  font-size: 16px;
+  font-size: 1em;
   border: 2px solid transparent;
   padding: 0px 16px;
   transition: all .3s;
@@ -170,7 +174,7 @@ header {
 }
 .window_ank .window_ank_text{
   width: 300px;
-  font-size: 18px;
+  font-size: 1.125em;
   line-height: 25px;
 }
 
@@ -217,7 +221,7 @@ header {
 
 .window_ank .window_ank_btn p{
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25em;
   text-shadow: #000 0 2px 4px;
   text-decoration: none;
   text-align: center;
@@ -230,20 +234,18 @@ header {
   margin: 0 auto;
   padding: 60px 5% 0px 5%;
   min-height: 450px;
+  
 }
-
-.welcome_content {
-  display: flex;
-  justify-content: space-between;
-
+.welcome .welcome_content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-
 .welcome .welcome_content .welcome_img img {
-  width: 600px;
+  width: 100%;
 }
 
 .welcome .welcome_content .welcome_cloud_text {
-  font-size: 20px;
+  font-size: 1.25em;
   line-height: 25px;
   overflow: hidden;
   border-right: .15em solid #ffc222;
@@ -278,17 +280,18 @@ header {
 }
 
 .welcome .welcome_content .welcome_cloud_text h1 {
-  font-size: 60px;
+  font-size: 3.75em;
 }
 
 .welcome .welcome_content .welcome_cloud_text h2 {
-  font-size: 30px;
+  
+  font-size: 1.875em;
   line-height: 40px;
 }
 
 .aboutMe {
   padding: 50px;
-  width: 100%;
+  max-width: 100%;
   min-height: 300px;
   background-color: rgb(48 48 48);
 }
@@ -303,7 +306,7 @@ header {
 
   text-align: justify;
   padding: 20px;
-  width: 50%;
+  max-width: 50%;
   float: left;
   background-color: #fff;
   border-radius: 2%;
@@ -312,7 +315,7 @@ header {
 
 .aboutMe .aboutMe_photo {
   float: right;
-  width: 45%;
+  max-width: 45%;
 }
 
 .aboutMe .aboutMe_photo img {
@@ -324,19 +327,19 @@ header {
 }
 
 .skills {
-  width: 100%;
-  min-height: 350px;
+  max-width: 100%;
+  min-height: 400px;
 }
 
 .skills .skills_content {
-  width: 100%;
+  max-width: 100%;
   padding: 60px 0 60px 0;
 
 }
 
 .skills .skills_content .skills_text {
   float: right;
-  width: 45%;
+  max-width: 45%;
   text-align: justify;
 }
 
@@ -375,8 +378,7 @@ header {
 
 .skills .skills_content .skills_box {
   float: left;
-  width: 45%;
-  min-height: 400%;
+  max-width: 45%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -396,7 +398,7 @@ header {
   color: #fff;
   text-align: center;
   margin-bottom: 40px;
-  font-size: 26px;
+  font-size: 1.625em;
   font-weight: 700;
 }
 
