--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,7 @@ li {
   margin: 0 auto;
   padding: 0 15px;
 }
-@media(max-width:1200px){
-  .container{
-    max-width: 970px;
-  }
-}
+
 body {
   font-family: 'PTS', serif;
   font-weight: 400;
@@ -101,12 +97,10 @@ header {
 }
 .header_top .header_btn:hover{
   background-color: red;
- 
   font-weight: 700;
 }
 .header_top .header_email {
   padding-left: 24px;
-  
 }
 
 .header_content {
@@ -114,7 +108,6 @@ header {
   background-color: #fff;
   padding: 10px 0px 0px;
   box-shadow: 0 5px 5px -5px rgba(0, 0, 0, .5);
-
 }
 
 .header_fixed {
@@ -157,10 +150,35 @@ header {
   box-shadow: 0 0 7px rgba(56, 44, 44, 0.5)
 }
 
-.menu li+li {
+.menu .menu_big li+li {
   padding-left: 10px;
 }
+/* HAMBURGER */
+.menu .hamburger {
+  display: none;
+}
+/* .hamburger_menu{
+position: fixed;
+z-index: 100;
+  top: 0;
+  right: 0;
+  width: 300px;
+  min-height: 100vh;
+  background-color: rgb(255, 0, 0);
+} */
 
+
+
+
+
+
+
+
+
+
+
+
+/*  */
 /* OKNO */
 #modal {
   display: none;
@@ -290,38 +308,16 @@ header {
 }
 
 .aboutMe {
-  padding: 50px;
   max-width: 100%;
   min-height: 300px;
   background-color: rgb(48 48 48);
 }
 
-.aboutMe .aboutMe_content {
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-}
-
 .aboutMe .aboutMe_text {
-  text-align: justify;
-  padding: 20px;
+  padding: 50px 20px;
+  text-align: center;
   max-width: 100%;
-  max-height: 300px;
-  background-color: #fff;
-  border-radius: 2%;
-  box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
-}
-
-.aboutMe .aboutMe_photo {
-  float: right;
-  max-width: 100%;
-}
-
-.aboutMe .aboutMe_photo img {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  width: 250px;
-  border-radius: 4%;
+  color: #fff;
 }
 
 .skills {
