--- a/css/media.css
+++ b/css/media.css
@@ -21,13 +21,16 @@
         max-width: 750px;
         margin: 0 auto;
     }
+
     .header_content .header_logo {
         display: none;
-        
+
     }
-    .header_content .header_content-inner .menu{
+
+    .header_content .header_content-inner .menu {
         margin: 0 auto;
     }
+
     .skills .skills_content {
         margin-top: 2%;
         display: grid;
@@ -81,7 +84,7 @@
         margin: 0 auto;
         padding: 0;
     }
-    
+
     .header_content {
         float: right;
         background-color: #000;
@@ -92,9 +95,11 @@
         padding: 0;
 
     }
-    .header .header_top{
+
+    .header .header_top {
         display: none;
     }
+
     .header_content .header_content-inner {
         display: block;
         float: right;
@@ -170,27 +175,34 @@
     }
 
     .projects_content_box {
-        grid-template-columns:1fr;
+        grid-template-columns: 1fr;
     }
-    .welcome .welcome_content .welcome_cloud_text{
+
+    .welcome .welcome_content .welcome_cloud_text {
         animation: none;
         padding-left: 10px;
     }
-    .welcome .welcome_content .welcome_cloud_text h2{
+
+    .welcome .welcome_content .welcome_cloud_text h2 {
         font-size: .8em;
     }
-    .welcome .welcome_content .welcome_cloud_text p{
+
+    .welcome .welcome_content .welcome_cloud_text p {
         font-size: .8em;
     }
-    .aboutMe .aboutMe_text{
+
+    .aboutMe .aboutMe_text {
         padding: 60px 50px;
     }
-    .skills .skills_content{
+
+    .skills .skills_content {
         padding: 60px 50px;
     }
-    .skills .skills_content .skills_box .box img{
+
+    .skills .skills_content .skills_box .box img {
         width: 110px;
     }
+
     .projects {
         padding: 20px 0;
     }
@@ -201,85 +213,130 @@
     .container {
         max-width: none;
     }
-.welcome .welcome_content{
-    grid-template-columns: 1fr;
-}
-.welcome .welcome_content .welcome_cloud_text{
-    order: 1;
-    text-align: center;
-    padding-bottom: 20px;
-}
-.welcome .welcome_content .welcome_img{
-    order: 2;
-}
-footer{
-    display: none;
-}
-} 
-@media(max-width:575px) {
-        .container {
-            max-width: none;
-        }
-    .header .header_top{
+
+    .welcome .welcome_content {
+        grid-template-columns: 1fr;
+    }
+
+    .welcome .welcome_content .welcome_cloud_text {
+        order: 1;
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .welcome .welcome_content .welcome_img {
+        order: 2;
+    }
+
+    footer {
         display: none;
     }
-    .skills .skills_content .skills_box .box img{
-        width: 100px;
+}
+
+@media(max-width:575px) {
+    .container {
+        max-width: none;
     }
-    .skills .skills_content .skills_box{
+
+    .header .header_top {
+        display: none;
+    }
+
+    .skills .skills_content .skills_box .box img {
+        width: 80px;
+    }
+
+    .skills .skills_content .skills_box {
         grid-template-columns: 1fr 1fr 1fr;
-        gap: 50px;
+        gap: 10px;
+        margin: 10px 0;
+
+    }
+
+    .skills .skills_content .skills_box .box {
         margin-bottom: 10px;
+        margin-top: 4%;
     }
-    .skills .skills_content .skills_box .box{
-    margin-bottom: 10px;
-    margin-top: 4%;
-    }
-    .skills .skills_content .skills_text{
+
+    .skills .skills_content .skills_text {
         text-align: center;
         padding-left: 0;
     }
-    .skills{
+
+    .skills {
         min-height: 100px;
     }
-    .skills .skills_content{
+
+    .skills .skills_content {
         padding-top: 30px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
     }
+
+    .projects_content_text {
+        font-size: 1.5en;
     }
+}
     @media(max-width:375px) {
-        .welcome .welcome_content .welcome_cloud_text h2{
+        .welcome .welcome_content .welcome_cloud_text h2 {
             font-size: .8em !important;
         }
-        .skills .skills_content .skills_text h1{
+        .skills .skills_content .skills_text{
+            margin: 0;
+        }
+        .skills .skills_content .skills_text h1 {
             font-size: 1.5em;
         }
-        .skills .skills_content .skills_text p{
+
+        .skills .skills_content .skills_text p {
+            font-size: 1em;
+        }
+        .skills .skills_content .skills_box {
+            column-gap: 20px;
+            margin: 0;
+        }
+        .skills .skills_content .skills_box .box img {
+            width: 60px;
+            
+        }
+        .projects_content_text {
             font-size: 1em;
         }
     }
 
-    @media(max-width:310px){
-        .welcome .welcome_content .welcome_cloud_text h1{
+    @media(max-width:310px) {
+        .welcome .welcome_content .welcome_cloud_text h1 {
             font-size: 1em !important;
             margin-bottom: 0;
         }
-        .welcome .welcome_content .welcome_cloud_text h2{
+
+        .welcome .welcome_content .welcome_cloud_text h2 {
             font-size: .6em !important;
         }
-        .welcome .welcome_content .welcome_cloud_text p{
+
+        .welcome .welcome_content .welcome_cloud_text p {
             font-size: .5em !important;
         }
-        .aboutMe .aboutMe_text h1{
+
+        .aboutMe .aboutMe_text h1 {
             font-size: 2em !important;
         }
-        .aboutMe .aboutMe_text p{
+
+        .aboutMe .aboutMe_text p {
             font-size: 1em;
         }
-        .projects_content_text{
-            font-size: 1em ;
+        .skills .skills_content .skills_box {
+            grid-template-columns: 1fr;
+            gap: 0px;
         }
-    }
+        .skills .skills_content .skills_box .box{
+            grid-auto-rows: auto;
+        }
+        .projects_content_text {
+            font-size: 1em;
+        }
+    
+   
+}
