--- a/css/style.css
+++ b/css/style.css
@@ -173,17 +173,17 @@ header {
   z-index: 999;
   position: fixed;
   min-width: 75%;
-  max-height: 100vh;
+  max-height: 100%;
   display: grid;
   grid-template-rows: 75% 1fr 1fr;
   color: rgb(0, 0, 0);
-  box-shadow:2px 0 2px 3px #000;
+  box-shadow: 2px 0 2px 3px #000;
   /* text-shadow: 1px 1px 2px black; */
 }
 
 .hamburger_menu .hamburger_menu_nav {
   display: grid;
-  grid-template-rows: repeat(4,1fr);
+  grid-template-rows: repeat(4, 1fr);
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -191,12 +191,12 @@ header {
   font-weight: 900;
 }
 
-.hamburger_menu_contact{
+.hamburger_menu_contact {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   justify-items: center;
   align-content: center;
-  
+
 }
 
 .hamburger_menu_btn {
@@ -205,7 +205,7 @@ header {
   text-align: center;
   font-weight: 900;
   font-size: 1.3em;
-  
+
 }
 
 
