--- a/css/media.css
+++ b/css/media.css
@@ -1,32 +1,40 @@
 @media(max-width:1200px) {
-    
+
     .container {
         max-width: 970px;
     }
-    .welcome{
+
+    .welcome {
         min-height: auto;
         padding: 30px 50px 30px 50px;
     }
-    .aboutMe{
+
+    .aboutMe {
         min-height: auto;
     }
-    .skills{
+
+    .skills {
         min-height: auto;
     }
-    .projects{
+
+    .projects {
         min-height: auto;
         padding: 4px 0 20px 0;
     }
-    .aboutMe .aboutMe_text{
+
+    .aboutMe .aboutMe_text {
         padding: 12px 50px 30px 50px;
     }
-    .skills .skills_content{
+
+    .skills .skills_content {
         padding: 30px 0;
     }
+
     footer {
         min-height: auto;
     }
-    footer .contact_content{
+
+    footer .contact_content {
         padding: 30px 50px;
     }
 
@@ -48,34 +56,40 @@
         max-width: 750px;
         margin: 0 auto;
     }
-    .welcome{
+
+    .welcome {
         min-height: auto;
         padding: 30px 50px 30px 50px;
     }
-    .aboutMe{
+
+    .aboutMe {
         min-height: auto;
     }
-    .skills{
+
+    .skills {
         min-height: auto;
     }
-    .projects{
+
+    .projects {
         min-height: auto;
         padding: 4px 0 20px 0;
     }
+
     .aboutMe .aboutMe_text {
         padding: 12px 50px 30px 50px;
     }
-    
+
     .header_content .header_logo {
         display: none;
 
     }
 
-    .header_content .header_content-inner .menu .menu_big{
+    .header_content .header_content-inner .menu .menu_big {
         min-width: 100%;
         max-width: 100%;
     }
-    .header_content .header_content-inner .menu .menu_big ul{
+
+    .header_content .header_content-inner .menu .menu_big ul {
         display: flex;
         justify-content: space-around;
     }
@@ -123,13 +137,14 @@
         grid-column: 1/1;
         grid-row: 1/1;
     }
-    footer{
+
+    footer {
         min-height: auto;
     }
-footer .contact_content
-{
-    padding: 20px 10px;
-}
+
+    footer .contact_content {
+        padding: 20px 10px;
+    }
 }
 
 @media(max-width:767px) {
@@ -137,23 +152,27 @@ footer .contact_content
         max-width: none;
         margin: 0 auto;
         padding: 0;
-        
+
     }
-    .welcome{
+
+    .welcome {
         min-height: auto;
         padding: 80px 50px 30px 50px;
     }
-    .aboutMe{
+
+    .aboutMe {
         min-height: auto;
     }
-    .skills{
+
+    .skills {
         min-height: auto;
     }
-    .projects{
+
+    .projects {
         min-height: auto;
         padding-top: 7px;
     }
-    
+
 
     .header_content {
         float: right;
@@ -176,10 +195,11 @@ footer .contact_content
         padding-top: 10px;
     }
 
-    .header_content .header_content-inner .menu .menu_big ul{
+    .header_content .header_content-inner .menu .menu_big ul {
         display: none;
     }
-/* HAMBURGER */
+
+    /* HAMBURGER */
     .menu .hamburger_wrapper {
         height: 30px;
         display: flex;
@@ -187,6 +207,7 @@ footer .contact_content
         align-items: center;
         margin-right: 10px;
     }
+
     .menu .hamburger {
         position: relative;
         display: block;
@@ -228,7 +249,7 @@ footer .contact_content
         position: fixed;
         z-index: 10;
         right: 70%;
-        transition: 1s;
+        transition: .5s;
     }
 
     .menu .hamburger_active::before {
@@ -246,68 +267,72 @@ footer .contact_content
         transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
         background-color: #000;
     }
+
     .menu_big {
         display: none;
-      }
-    
-      /* HAMBURGER MENU*/
+    }
 
-.hamburger_menu {
-    background-color: #ffffff;
-    top: 0;
-    right: -75%;
-    z-index: 5;
-    position: fixed;
-    min-width: 75%;
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: 75% 1fr 1fr;
-    color: rgb(0, 0, 0);
-    box-shadow: 2px 0 2px 3px #000;
-    transition: 1s;
-  }
-  
-  .hamburger_menu_active{
-    right: 0;
-    transition: 1s;
-  }
-  .hamburger_menu .hamburger_menu_nav {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 1.5em;
-    font-weight: 900;
-  }
-  
-  .hamburger_menu_contact {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-    align-content: center;
-  
-  }
-  
-  .hamburger_menu_btn {
-    background-color: #ffc222;
-    border: none;
-    text-align: center;
-    font-weight: 900;
-    font-size: 1.3em;
-  
-  }
-  
-  
-  
-  /*  */
+    /* HAMBURGER MENU*/
 
-  .header_content{
-      z-index: 0;
-  }
-  .header_fixed{
-    z-index: 0;
-}
+    .hamburger_menu {
+        background-color: #ffffff;
+        top: 0;
+        right: -75%;
+        z-index: 5;
+        position: fixed;
+        min-width: 75%;
+        min-height: 100%;
+        display: grid;
+        grid-template-rows: 75% 1fr 1fr;
+        color: rgb(0, 0, 0);
+        box-shadow: 2px 0 2px 3px #000;
+        transition: .5s;
+    }
+
+    .hamburger_menu_active {
+        right: 0;
+        transition: .5s;
+    }
+
+    .hamburger_menu .hamburger_menu_nav {
+        display: grid;
+        grid-template-rows: repeat(4, 1fr);
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 1.5em;
+        font-weight: 900;
+    }
+
+    .hamburger_menu_contact {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        align-content: center;
+
+    }
+
+    .hamburger_menu_btn {
+        background-color: #ffc222;
+        border: none;
+        text-align: center;
+        font-weight: 900;
+        font-size: 1.3em;
+
+    }
+
+
+
+    /*  */
+
+    .header_content {
+        z-index: 0;
+    }
+
+    .header_fixed {
+        z-index: 0;
+    }
+
     .header_content .header_logo {
         display: none;
     }
@@ -339,17 +364,20 @@ footer .contact_content
     .skills .skills_content .skills_box .box img {
         width: 110px;
     }
-    .skills .skills_content .skills_text{
+
+    .skills .skills_content .skills_text {
         margin-top: 1%;
     }
 
     .projects {
         padding: 20px 0;
     }
-    footer{
+
+    footer {
         min-height: auto;
     }
-    footer .contact_content{
+
+    footer .contact_content {
         padding: 30px 50px;
     }
 }
@@ -374,12 +402,15 @@ footer .contact_content
     .welcome .welcome_content .welcome_img {
         order: 2;
     }
-    .projects{
+
+    .projects {
         padding: 1px 0;
     }
-    .projects_content_text{
+
+    .projects_content_text {
         padding: 0;
     }
+
     footer {
         display: none;
     }
@@ -432,85 +463,98 @@ footer .contact_content
         font-size: 1.5en;
     }
 }
-@media(max-width:440px){
-    .welcome .welcome_content .welcome_cloud_text{
-        padding-bottom:20px;
+
+@media(max-width:440px) {
+    .welcome .welcome_content .welcome_cloud_text {
+        padding-bottom: 20px;
     }
-    .welcome .welcome_content .welcome_cloud_text h2{
+
+    .welcome .welcome_content .welcome_cloud_text h2 {
         font-size: .8em !important;
     }
 }
-    @media(max-width:375px) {
-        
-        .welcome .welcome_content .welcome_cloud_text h1{
-            margin: 0.5em 0;
-        }
-        .welcome .welcome_content .welcome_cloud_text h2 {
-            font-size: .8em !important;
-            line-height: 10px;
-        }
-        .welcome .welcome_content .welcome_cloud_text p {
-          
-            line-height: 15px;
-        }
-        .welcome .welcome_content .welcome_cloud_text{
-            margin-bottom: 10px;
-        }
-        
-        .skills .skills_content .skills_text{
-            margin: 0;
-        }
-        .skills .skills_content .skills_text h1 {
-            font-size: 1.5em;
-        }
 
-        .skills .skills_content .skills_text p {
-            font-size: 1em;
-        }
-        .skills .skills_content .skills_box {
-            column-gap: 20px;
-            margin: 0;
-        }
-        .skills .skills_content .skills_box .box img {
-            width: 60px;
-            
-        }
-        .projects_content_text {
-            font-size: 1em;
-        }
+@media(max-width:375px) {
+
+    .welcome .welcome_content .welcome_cloud_text h1 {
+        margin: 0.5em 0;
     }
 
-    @media(max-width:310px) {
-        .welcome .welcome_content .welcome_cloud_text h1 {
-            font-size: 1em !important;
-            margin-bottom: 0;
-        }
+    .welcome .welcome_content .welcome_cloud_text h2 {
+        font-size: .8em !important;
+        line-height: 10px;
+    }
 
-        .welcome .welcome_content .welcome_cloud_text h2 {
-            font-size: .6em !important;
-        }
+    .welcome .welcome_content .welcome_cloud_text p {
 
-        .welcome .welcome_content .welcome_cloud_text p {
-            font-size: .5em !important;
-        }
+        line-height: 15px;
+    }
 
-        .aboutMe .aboutMe_text h1 {
-            font-size: 2em !important;
-        }
+    .welcome .welcome_content .welcome_cloud_text {
+        margin-bottom: 10px;
+    }
 
-        .aboutMe .aboutMe_text p {
-            font-size: 1em;
-        }
-        .skills .skills_content .skills_box {
-            grid-template-columns: 1fr;
-            gap: 0px;
-        }
-        .skills .skills_content .skills_box .box{
-            grid-auto-rows: auto;
-        }
-        .projects_content_text {
-            font-size: 1em;
-        }
-    
-   
+    .skills .skills_content .skills_text {
+        margin: 0;
+    }
+
+    .skills .skills_content .skills_text h1 {
+        font-size: 1.5em;
+    }
+
+    .skills .skills_content .skills_text p {
+        font-size: 1em;
+    }
+
+    .skills .skills_content .skills_box {
+        column-gap: 20px;
+        margin: 0;
+    }
+
+    .skills .skills_content .skills_box .box img {
+        width: 60px;
+
+    }
+
+    .projects_content_text {
+        font-size: 1em;
+    }
+}
+
+@media(max-width:310px) {
+    .welcome .welcome_content .welcome_cloud_text h1 {
+        font-size: 1em !important;
+        margin-bottom: 0;
+    }
+
+    .welcome .welcome_content .welcome_cloud_text h2 {
+        font-size: .6em !important;
+    }
+
+    .welcome .welcome_content .welcome_cloud_text p {
+        font-size: .5em !important;
+    }
+
+    .aboutMe .aboutMe_text h1 {
+        font-size: 2em !important;
+    }
+
+    .aboutMe .aboutMe_text p {
+        font-size: 1em;
+    }
+
+    .skills .skills_content .skills_box {
+        grid-template-columns: 1fr;
+        gap: 0px;
+    }
+
+    .skills .skills_content .skills_box .box {
+        grid-auto-rows: auto;
+    }
+
+    .projects_content_text {
+        font-size: 1em;
+    }
+
+
 }
